tests/invalid/multimode_dcg.err_exp
multimode_dcg.m:027: In clause for predicate `multimode_dcg.test1/3':
multimode_dcg.m:027:   syntax error: some but not all arguments have mode annotations.
multimode_dcg.m:029: In clause for predicate `multimode_dcg.test1/3':
multimode_dcg.m:029:   syntax error: some but not all arguments have mode annotations.
multimode_dcg.m:037: In clause for predicate `multimode_dcg.test2/4':
multimode_dcg.m:037:   syntax error: some but not all arguments have mode annotations.
multimode_dcg.m:039: In clause for predicate `multimode_dcg.test2/4':
multimode_dcg.m:039:   syntax error: some but not all arguments have mode annotations.
multimode_dcg.m:041: In clause for predicate `multimode_dcg.test2/4':
multimode_dcg.m:041:   syntax error: some but not all arguments have mode annotations.
multimode_dcg.m:043: In clause for predicate `multimode_dcg.test2/4':
multimode_dcg.m:043:   syntax error: some but not all arguments have mode annotations.
multimode_dcg.m:029: In clause for `test1(out, di, uo)':
multimode_dcg.m:029:   mode mismatch in disjunction.
multimode_dcg.m:029:   `HeadVar__1' :: free, unique(0).
multimode_dcg.m:043: In clause for `test2(in, out, di, uo)':
multimode_dcg.m:043:   mode mismatch in disjunction.
multimode_dcg.m:043:   `HeadVar__2' :: free, unique(0), free, unique(0).
multimode_dcg.m:043: In clause for `test2(out, in, di, uo)':
multimode_dcg.m:043:   mode mismatch in disjunction.
multimode_dcg.m:043:   `HeadVar__1' :: free, free, unique(0), unique(0).
multimode_dcg.m:043: In clause for `test2(out, out, di, uo)':
multimode_dcg.m:043:   mode mismatch in disjunction.
multimode_dcg.m:043:   `HeadVar__1' :: free, free, unique(0), unique(0).
multimode_dcg.m:043:   `HeadVar__2' :: free, unique(0), free, unique(0).
